syntax = "proto3";
package apipb.file;

option go_package = "./;apipb";

// Upload URL RPC
message UploadUrlParams { string type = 1; }
message UploadUrlResponse { string url = 1; }

service FileService {
  rpc upload_url(UploadUrlParams) returns (UploadUrlResponse);
}
