syntax = "proto3";
package api.todo;

option go_package = "./;publicapi";

message TodoGetParams {}

message TodoAddParams { string task = 2; }

message TodoDeleteParams { string id = 2; }

message TodoObject {
  string id = 2;
  string task = 3;
}

message TodoResponse { repeated TodoObject todos = 1; }

message TodoDeleteResponse { string message = 1; }

service TodoService {
  rpc add_todo(TodoAddParams) returns (TodoObject);
  rpc delete_todo(TodoDeleteParams) returns (TodoDeleteResponse);
  rpc get_todos(TodoGetParams) returns (TodoResponse);
}
